[package]
name = "ggml-sys"
version = "0.2.0-dev"
repository = { workspace = true }
edition = "2021"
description = "Raw bindings (i.e. bindgen output) for the ggml library."
license = "MIT"

[build-dependencies]
cc = "^1.0"
#xmake = "^0.2"
xmake = { git = "https://github.com/A2va/xmake-rs.git", branch = "detect-crt" }

[features]
cublas = []
clblast = []
metal = []
